code/examples/parsing/fail/14-nonanme-player-fails.gridlock
GRIDLOCK
Players: Amy, Bill.
Grid: 3x3.
Colours: red, green.

  plays red at (0,0).
Bill plays red at (2,0).
  plays green at (1,1).
Bill plays red at (0,2).
  plays red at (2,2).
Bill cannot move.
Amy wins!